--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
 @import url('https://cerebrumui.netlify.app/style.css');
+@import url('https://unicons.iconscout.com/release/v4.0.0/css/line.css');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css');
 @import './styles/homepage.css';
 @import './styles/quizCard.css';
 @import './styles/quizPage.css';
+@import './styles/auth.css';
 
 :root {
   --complimentary-text-color: #ffd200;
